Automate building and publish of docker image
This change is designed to automate the building and publication of
Docker images. When a new version tag is pushed to Github (and only when
a new version tag is pushed), CircleCI should build the Docker image and
push it to Docker Hub.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,11 @@
+---
+defaults: &defaults
+  working_directory: /go/src/github.com/timberio/agent
+
 version: 2
 jobs:
-  build:
-    working_directory: /go/src/github.com/timberio/agent
+  test:
+    <<: *defaults
     docker:
       - image: circleci/golang:1.8
     environment:
@@ -23,3 +27,74 @@ jobs:
             make test | tee ${TEST_RESULTS}/go-test.out
       - store_test_results:
           path: /tmp/test-results
+  build_amd64_darwin:
+    <<: *defaults
+    docker:
+      - image: circleci/golang:1.8
+    steps:
+      - checkout
+      - run:
+          name: Build for Darwin (amd64/x86_64)
+          command: |
+            make amd64-darwin-tarball
+      - persist_to_workspace:
+          root: build
+          paths:
+            - amd64-darwin
+  build_amd64_linux:
+    <<: *defaults
+    docker:
+      - image: circleci/golang:1.8
+    steps:
+      - checkout
+      - run:
+          name: Build for Linux (amd64/x86_64)
+          command: |
+            make amd64-linux-tarball
+      - persist_to_workspace:
+          root: build
+          paths:
+            - amd64-linux
+  build_and_publish_docker_image:
+    <<: *defaults
+    docker:
+      - image: docker:17.03.0-ce
+    steps:
+      - checkout
+      - attach_workspace:
+          at: /go/src/github.com/timberio/agent/build/amd64-linux
+      - setup_remote_docker
+      - run:
+          name: Build Docker Image
+          command: |
+            make docker-image
+      - run:
+          name: Publish Docker Image
+          command: |
+            VERSION=$(cat VERSION)
+            docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+            docker push timberio/agent:$(VERSION)
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - test
+      - build_darwin_amd64:
+          filters:
+            branches:
+              only: /refs\/tags\/v.*/
+          requires:
+            - test
+      - build_linux_amd64:
+          filters:
+            branches:
+              only: /refs\/tags\/v.*/
+          requires:
+            - test
+      - build_and_publish_docker_image:
+          filters:
+            branches:
+              only: /refs\/tags\/v.*/
+          requires:
+            - build_linux_amd64
