Fix name of Docker image for CircleCI
The CircleCI configuration was pointing at the wrong Docker image name.
The correct name is `timberio/agent-builder`; it incorrectly pointed to
`timberio/timber-agent-builder`.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: timberio/timber-agent-builder:1.1.0
+      - image: timberio/agent-builder:1.1.0
     environment:
       TEST_RESULTS: /tmp/test-results
     steps:
