Add back CircleCI 2.0 working_directory
This was accidentally removed when removing the CircleCI 2.0 Workflow
support. Tests have been failing on CirceCI 2.0 because the working
directory was incorrect and vendorized dependencies could not be found.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
   build:
     docker:
       - image: timberio/agent-builder:1.2.0
+    working_directory: /go/src/github.com/timberio/agent
     environment:
       TEST_RESULTS: /tmp/test-results
     steps:
