Fix CircleCI Publish Docker Image
The bash script that controls publishing a new Docker image set the
VERSION variable correctly, but then tried to call it using
`$(VERSION)`. This actually attempted to call the Bash function or
executable `VERSION`, which does not exist.

Changed the call to `$VERSION` which properly sources the variable's
value.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
               make docker-image
               VERSION=$(cat VERSION)
               docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-              docker push timberio/agent:$(VERSION)
+              docker push timberio/agent:$VERSION
             else
               echo "Not building a release tag"
             fi
