Merges Elasticbeanstalk configuration files
The Elasticbeanstalk configuration file only works as a single file. It
seems like it is impossible to split the file into two parts (one
handling the user configuration and the other handling the technical
details of installing the Timber agent). This is unfortunate, but we
have to go with what we are given.

Closes #55

--- a/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
+++ b/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
@@ -2,21 +2,38 @@
 #
 # Installation configuration script for Timber's log collection agent
 #
+# You will need to edit this file to collect the specific log files you
+# need with the appropriate Timber API key.
+#
 # This file installs the Timber log collection agent and starts it as a
 # backaground service. This is the desired situation for most AWS Elastic
-# Beanstalk solutions. It is recommended that you start by adding a separate
-# script that adds a Timber configuration file. An example can be found at:
+# Beanstalk solutions. At the top of the file, you will also find an entry
+# that creates a file `/etc/timber.toml`. This is the configuration file
+# used by Timber, and you will need to edit the content to fit your needs.
 #
-#   https://github.com/timber/agent/blob/master/support/scripts/platforms/aws_elastic_beanstalk/00_timber_conf.config
-#
-# By maintaining the configuration file in a separate script, you can replace
-# this file with the latest version at any time without needing to edit it.
+# The example shown here is for a NodeJS application being run behind
+# an nginx proxy. By default, Elastic Beanstalk will redirect the STDOUT for
+# your application to a log file, so you just need to locate the name of this
+# file for the platform stack you are using.
 #
 # This file should be added to the `.ebextensions` directory in your project
-# folder. It should be sorted _after_ the file that sets up the configuration
-# file (prefixing it with a number like `01_` does the trick).
+# folder.
 ---
 files:
+  "/etc/timber.toml":
+    mode: "000640"
+    owner: root
+    group: root
+    encoding: plain
+    content: |
+      [[files]]
+      path = "/var/log/nodejs/nodejs.log"
+      apiKey = "abcdefg_123:zyxwvut"
+
+      [[files]]
+      path = "/var/log/nginx/access.log"
+      apiKey = "1234567_abc:uuxJ9"
+
   "/opt/install_timber.sh":
     mode: "000755"
     owner: root
@@ -38,14 +55,14 @@ files:
       # Remove any existing version of the agent
       rm -rf /opt/timber-agent
 
-      # Download the agent
-      curl -o /opt/timber-agent.tar.bz2 \
-        https://s3.amazonaws.com/packages.timber.io/agent/v0.0.0-alpha%2B20170705T195528Z/amd64-linux-gnu/timber-agent.tar.bz2
+      # Download the latest patch version of the agent after 0.1
+      curl -o /opt/timber-agent.tar.gz \
+        https://s3.amazonaws.com/packages.timber.io/agent/0.1.x/linux-amd64/timber-agent-0.1.x-linux-amd64.tar.gz
 
       # Unpack the agent archive at /opt/timber-agent
-      tar -xjf /opt/timber-agent.tar.bz2 -C /opt
+      tar -xjf /opt/timber-agent.tar.gz -C /opt
 
-      rm /opt/timber-agent.tar.bz2
+      rm /opt/timber-agent.tar.gz
 
   "/etc/logrotate.d/timber":
     mode: "000644"
