Use api_key instead of apiKey in config files
The notation `apiKey` in a config file does not seem natural; it's very
Go-ish whereas the norm for INI-style config files (which TOML inherits
from) is to use underscores.

This deprecates the use of `apiKey` immediately. It will be released in
a new version set (0.2.x).

Closes #53

--- a/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
+++ b/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
@@ -28,11 +28,11 @@ files:
     content: |
       [[files]]
       path = "/var/log/nodejs/nodejs.log"
-      apiKey = "abcdefg_123:zyxwvut"
+      api_key = "abcdefg_123:zyxwvut"
 
       [[files]]
       path = "/var/log/nginx/access.log"
-      apiKey = "1234567_abc:uuxJ9"
+      api_key = "1234567_abc:uuxJ9"
 
   "/opt/install_timber.sh":
     mode: "000755"
