Update Elasticbeanstalk configuration to use 0.2.x
The Elasticbeanstalk example was still set to pull in the patch versions
of 0.1 versions. This updates the configuration to reflect the latest
minor version set.

--- a/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
+++ b/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
@@ -55,9 +55,9 @@ files:
       # Remove any existing version of the agent
       rm -rf /opt/timber-agent
 
-      # Download the latest patch version of the agent after 0.1
+      # Download the latest patch version of the Timber Agent with a major.minor version of 0.2
       curl -o /opt/timber-agent.tar.gz \
-        https://s3.amazonaws.com/packages.timber.io/agent/0.1.x/linux-amd64/timber-agent-0.1.x-linux-amd64.tar.gz
+        https://s3.amazonaws.com/packages.timber.io/agent/0.2.x/linux-amd64/timber-agent-0.2.x-linux-amd64.tar.gz
 
       # Unpack the agent archive at /opt/timber-agent
       tar -xjf /opt/timber-agent.tar.gz -C /opt
