Bundle agent log for Elastic Beanstalk
Elastic Beanstalk allows users the option to download the contents of
their instance logs as an archive. In order to be included in this
archive bundle, Elastic Beanstalk needs to be told which additional
files to add through a configuration file under
/opt/elasticbeanstalk/tasks/bundlelogs.d/.

This change adds the /var/log/timber-agent.log file to the bundle.

--- a/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
+++ b/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
@@ -80,6 +80,14 @@ files:
         endscript
       }
 
+  "/opt/elasticbeanstalk/tasks/bundlelogs.d/timber-agent.conf":
+    mode: "000755"
+    owner: root
+    group: root
+    encoding: plain
+    content: |
+      /var/log/timber-agent.log
+
   "/etc/rc.d/init.d/timber-agent":
     mode: "000755"
     owner: root
