Update AWS Elastic Beanstalk example extension
This updates the AWS Elatic Beanstalk example extension to follow the
installation instructions. It simplified the instructions by enumerating
them and specified exactly where the user needs to make changes.

(Commit by Ben; Squashed by David on 08 August 2017)

--- a/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
+++ b/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
@@ -1,23 +1,19 @@
 ###
 #
-# Installation configuration script for Timber's log collection agent
+# Installation configuration script for Timber.io's log collection agent
 #
-# You will need to edit this file to collect the specific log files you
-# need with the appropriate Timber API key.
+# * Docs: https://timber.io/docs/platforms/aws-elastic-beanstalk
+# * Support: support@timber.io
 #
-# This file installs the Timber log collection agent and starts it as a
-# backaground service. This is the desired situation for most AWS Elastic
-# Beanstalk solutions. At the top of the file, you will also find an entry
-# that creates a file `/etc/timber.toml`. This is the configuration file
-# used by Timber, and you will need to edit the content to fit your needs.
+# To use this file:
 #
-# The example shown here is for a NodeJS application being run behind
-# an nginx proxy. By default, Elastic Beanstalk will redirect the STDOUT for
-# your application to a log file, so you just need to locate the name of this
-# file for the platform stack you are using.
+# 1. Replace `MY-TIMBER-API-KEY` with your Timber.io application API key
+# 2. Replace the `path` values with the actual log files you want to.
+#    Feel free to add multiple `[[files]]` entries for any additional log
+#    files you want to track.
+# 3. This file should be added to the `.ebextensions` directory in your
+#    project folder.
 #
-# This file should be added to the `.ebextensions` directory in your project
-# folder.
 ---
 files:
   "/etc/timber.toml":
@@ -27,12 +23,15 @@ files:
     encoding: plain
     content: |
       [[files]]
-      path = "/var/log/nodejs/nodejs.log"
-      api_key = "abcdefg_123:zyxwvut"
+      path = "/var/log/nodejs/nodejs.log" # <--- REPLACE WITH YOUR LOG FILE PATH
+      api_key = "MY-TIMBER-API-KEY" # <--------- REPLACE WITH YOUR TIMBER.IO APPLICATION API KEY
 
       [[files]]
-      path = "/var/log/nginx/access.log"
-      api_key = "1234567_abc:uuxJ9"
+      path = "/var/log/nginx/access.log" # <--- REPLACE WITH YOUR LOG FILE PATH
+      api_key = "MY-TIMBER-API-KEY" # <-------- REPLACE WITH YOUR TIMBER.IO APPLICATION API KEY
+
+      # Add as many files as you'd like.
+      # Addtional configuration can be found at https://timber.io/docs/platforms/the-timber-agent
 
   "/opt/install_timber.sh":
     mode: "000755"
