Update ElasticBeanstalk ebextensions example with new default_api_key setting

--- a/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
+++ b/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
@@ -22,16 +22,16 @@ files:
     group: root
     encoding: plain
     content: |
-      [[files]]
-      path = "/var/log/nodejs/nodejs.log" # <--- REPLACE WITH YOUR LOG FILE PATH
-      api_key = "MY-TIMBER-API-KEY" # <--------- REPLACE WITH YOUR TIMBER.IO APPLICATION API KEY
+      default_api_key = "MY-TIMBER-API-KEY" # <-- REPLACE WITH YOUR TIMBER.IO APPLICATION API KEY
 
       [[files]]
-      path = "/var/log/nginx/access.log" # <--- REPLACE WITH YOUR LOG FILE PATH
-      api_key = "MY-TIMBER-API-KEY" # <-------- REPLACE WITH YOUR TIMBER.IO APPLICATION API KEY
+      path = "/var/log/nodejs/nodejs.log" # <---- REPLACE WITH YOUR LOG FILE PATH
 
-      # Add as many files as you'd like.
-      # Addtional configuration can be found at https://timber.io/docs/platforms/the-timber-agent
+      [[files]]
+      path = "/var/log/nginx/access.log" # <----- REPLACE WITH YOUR LOG FILE PATH
+
+      # Add as many [[file]] entries as you'd like.
+      # Addtional configuration: https://timber.io/docs/platforms/other/agent
 
   "/opt/install_timber.sh":
     mode: "000755"
