Fix Elastic Beanstalk release unarchiving
The release unarchiving portion of the AWS Elastic Beanstalk
configuration script accidentally treated the archive as a bzip2 file
instead of a gzip file. This has been corrected.

--- a/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
+++ b/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
@@ -59,7 +59,7 @@ files:
         https://s3.amazonaws.com/packages.timber.io/agent/0.3.x/linux-amd64/timber-agent-0.3.x-linux-amd64.tar.gz
 
       # Unpack the agent archive at /opt/timber-agent
-      tar -xjf /opt/timber-agent.tar.gz -C /opt
+      tar -xzf /opt/timber-agent.tar.gz -C /opt
 
       rm /opt/timber-agent.tar.gz
 
