Get API key for Elastic Beanstalk from environment
This changes how we handle the API key on AWS Elastic Beanstalk
instances. Previously, the user was expected to add a line that
contained the API key, and we offered advanced instructions on how to
configure the system to change the API key based on the environment.
Now, the extension will rely on fetching the API key from the
environment by default.

This is accomplished using the `Fn::GetOptionSetting` command from
CloudFormation (which is what proceses Elastic Beanstalk configuration
files). The user is expected to set the environment variable
`TIMBER_API_KEY` which is then fetched when the configuration file is
processed. We then use a small `sed` script to inject it into the
top of the configuration file.

--- a/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
+++ b/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
@@ -7,7 +7,7 @@
 #
 # To use this file:
 #
-# 1. Replace `MY-TIMBER-API-KEY` with your Timber.io application API key
+# 1. Set the environment variable "TIMBER_API_KEY" using `eb setenv`
 # 2. Replace the `path` values with the actual log files you want to.
 #    Feel free to add multiple `[[files]]` entries for any additional log
 #    files you want to track.
@@ -22,8 +22,6 @@ files:
     group: root
     encoding: plain
     content: |
-      default_api_key = "MY-TIMBER-API-KEY" # <-- REPLACE WITH YOUR TIMBER.IO APPLICATION API KEY
-
       [[files]]
       path = "/var/log/nodejs/nodejs.log" # <---- REPLACE WITH YOUR LOG FILE PATH
 
@@ -32,6 +30,21 @@ files:
 
       # Add as many [[file]] entries as you'd like.
       # Addtional configuration: https://timber.io/docs/platforms/other/agent
+
+  "/tmp/set_timber_api_keys.sh":
+    mode: "00755"
+    owner: root
+    group: root
+    encoding: plain
+    content: |
+      #!/bin/bash
+      timber_config_file="/etc/timber.toml"
+      timber_api_key=`{ "Fn::GetOptionSetting" : { "Namespace": "aws:elasticbeanstalk:application:environment", "OptionName": "TIMBER_API_KEY" } }`
+
+      sed "1i\
+      default_api_key = \"${timber_api_key}\"\
+      \n
+      " -i $timber_config_file
 
   "/opt/install_timber.sh":
     mode: "000755"
@@ -204,7 +217,9 @@ files:
 commands:
   00_install_timber:
     command: "/opt/install_timber.sh"
-  01_chkconfig:
+  01_set_api_key:
+    command: "/tmp/set_timber_api_keys.sh"
+  02_chkconfig:
     command: "/sbin/chkconfig timber-agent on"
-  02_start_service:
+  03_start_service:
     command: "/sbin/service timber-agent restart"
