--- a/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
+++ b/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
@@ -67,9 +67,9 @@ files:
       # Remove any existing version of the agent
       rm -rf /opt/timber-agent
 
-      # Download the latest patch version of the Timber Agent with a major.minor version of 0.3
+      # Download the latest patch version of the Timber Agent with a major.minor version of 0.4
       curl -o /opt/timber-agent.tar.gz \
-        https://s3.amazonaws.com/packages.timber.io/agent/0.3.x/linux-amd64/timber-agent-0.3.x-linux-amd64.tar.gz
+        https://s3.amazonaws.com/packages.timber.io/agent/0.4.x/linux-amd64/timber-agent-0.4.x-linux-amd64.tar.gz
 
       # Unpack the agent archive at /opt/timber-agent
       tar -xzf /opt/timber-agent.tar.gz -C /opt
@@ -144,7 +144,7 @@ files:
       start() {
         [ -x $exec ] || exit 5
         echo -n $"Starting $prog: "
-        daemon $exec --daemonize --pidfile $pidfile --agent-log-file $logfile
+        daemon $exec capture-files --daemonize --pidfile $pidfile --output-log-file $logfile
         retval=$?
         echo
         [ $retval -eq 0 ] && touch $lockfile
