--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: timberio/agent-builder:2.0.0
+      - image: timberio/agent-builder:3.0.0
     working_directory: /go/src/github.com/timberio/agent
     environment:
       TEST_RESULTS: /tmp/test-results
@@ -20,6 +20,12 @@ jobs:
             make test | tee ${TEST_RESULTS}/go-test.out
       - store_test_results:
           path: /tmp/test-results
+  release:
+    docker:
+      - image: timberio/agent-builder:3.0.0
+    working_directory: /go/src/github.com/timberio/agent
+    steps:
+      - checkout
       - run:
           name: Publish Release
           command: |
@@ -41,8 +47,19 @@ jobs:
               echo "Not building a release tag"
             fi
 
-deployment:
-  release:
-    tag: /v.*/
-    commands:
-      - echo "Initiating tagged release workaround for CircleCI 2.0"
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build:
+          filters:
+            tags:
+              only: /.*/
+      - release:
+          filters:
+            tags:
+              only: /v.*/
+            branches:
+              ignore: /.*/
+          requires:
+            - build
