--- a/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
+++ b/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
@@ -67,9 +67,9 @@ files:
       # Remove any existing version of the agent
       rm -rf /opt/timber-agent
 
-      # Download the latest patch version of the Timber Agent with a major.minor version of 0.4
+      # Download the latest patch version of the Timber Agent with a major.minor version of 0.5
       curl -o /opt/timber-agent.tar.gz \
-        https://s3.amazonaws.com/packages.timber.io/agent/0.4.x/linux-amd64/timber-agent-0.4.x-linux-amd64.tar.gz
+        https://s3.amazonaws.com/packages.timber.io/agent/0.5.x/linux-amd64/timber-agent-0.5.x-linux-amd64.tar.gz
 
       # Unpack the agent archive at /opt/timber-agent
       tar -xzf /opt/timber-agent.tar.gz -C /opt
@@ -222,4 +222,4 @@ commands:
   02_chkconfig:
     command: "/sbin/chkconfig timber-agent on"
   03_start_service:
-    command: "/sbin/service timber-agent restart"
+    gommand: "/sbin/service timber-agent restart"
