Fix typo in Elastic Beanstalk configuration
The Elastic Beanstalk configuration had a typo where `command` was
spelled as `gommand`. This would prevent proper execution on an Elastic
Beanstalk box.

--- a/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
+++ b/support/scripts/platforms/aws_elastic_beanstalk/01_timber_install.config
@@ -222,4 +222,4 @@ commands:
   02_chkconfig:
     command: "/sbin/chkconfig timber-agent on"
   03_start_service:
-    gommand: "/sbin/service timber-agent restart"
+    command: "/sbin/service timber-agent restart"
